<resources>
    <string name="app_name">Algae Estimator</string>

    <!-- Action Bar -->
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_about_pushed">Algae Estimator :: About</string>

    <string name="section_format">Hello World from fragment: %1$d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <!-- Preferences -->
    <string name="pref_use_imperial">Imperial Units</string>
    <string name="pref_imperial_key">pref_imperial</string>
    <string name="pref_imperial_sum">Switch to imperial units.</string>

    <!-- Calculator Labels -->
    <string name="calc_po4">PO4 Concentration</string>
    <string name="calc_surf_temp">Temp Surface</string>
    <string name="calc_bottom_temp">Temp Bottom</string>
    <string name="calc_lake_depth">Lake Depth</string>
    <string name="calc_chl_a">Chl a Value</string>

    <!-- Submit Labels -->
    <string name="submit_temp_diff">Temperature Difference</string>
    <string name="submit_pav">Pav</string>
    <string name="submit_total_chla">Total Chl a</string>
    <string name="submit_cyano_chla">Cyano Chl a</string>
    <string name="submit_r0">r0</string>
    <string name="submit_n0">n0</string>
    <string name="submit_k">k</string>

    <!-- Activity Titles -->
    <string name="title_activity_chla">ChlaActivity</string>
    <string name="title_activity_submit">SubmitActivity</string>
    <string name="title_activity_po4">Po4Activity</string>

    <!--symbol-->
    <string name="tick">\u2713</string>
    <string name="tick2">\u2714</string>

    <!--PO estimate-->
    <string name="PO_land_text">Type of land within 1 km of the lake:</string>
    <string name="PO_vegetation_text">Type of vegetation near the shore:</string>
    <string name="PO_plant_text">Quantity of plants in the lake:</string>
    <string name="PO_frequency_text">Frequency of algea bloom occurence:</string>

    <!--Help text-->
    <string name="lux_text1">Lux is the unit of luminance and luminous emittance, measuring luminous flux per unit area</string>
    <string name="lux_text_note"><u>Note</u>: If leave blank, the lux value will be automatically estimated by the phone’s light sensor</string>
</resources>
