<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright 2015 UW-Parkside, Harleen Kaur, Hanh Le, Francisco Mateo

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WBackground">
    <!-- TODO: Extract hard coded String to String values -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <android.support.v7.widget.GridLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            app:columnCount="3"
            app:rowCount="5"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="40dp"
            >
            <edu.uwp.alga.utils.LabelTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_columnWeight="4"
                app:layout_rowWeight="1"
                android:textColor="@color/WText"
                android:textSize="@dimen/text_medium"
                android:text="@string/calc_po4"
                android:id="@+id/po4_concentration" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="mg/L"
                android:padding="8dp"
                android:background="@color/WText"
                android:gravity="center"
                android:ems="10"
                android:id="@+id/editText"
                app:layout_columnWeight="3" />

            <ImageButton
                android:layout_marginTop="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@color/transparent"
                android:src="@drawable/question"
                android:scaleType="centerInside"
                app:layout_columnWeight="1"/>


            <edu.uwp.alga.utils.LabelTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_columnWeight="4"
                app:layout_rowWeight="1"
                android:textColor="@color/WText"
                android:textSize="@dimen/text_medium"
                android:text="@string/calc_surf_temp"
                android:id="@+id/temp_surface" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="3"
                android:inputType="number"
                android:hint="°C"
                android:padding="8dp"
                android:background="@color/WText"
                android:gravity="center"
                android:ems="10"
                android:id="@+id/temp_surface_edit"
                />
            <ImageButton
                android:layout_marginTop="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@color/transparent"
                android:src="@drawable/question"
                android:scaleType="centerInside"
                app:layout_columnWeight="1"
                />

            <edu.uwp.alga.utils.LabelTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_columnWeight="4"
                app:layout_rowWeight="1"
                android:textColor="@color/WText"
                android:textSize="@dimen/text_medium"
                android:text="@string/calc_bottom_temp"
                android:id="@+id/bottom_surface" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="3"
                android:inputType="number"
                android:hint="°C"
                android:padding="8dp"
                android:background="@color/WText"
                android:gravity="center"
                android:ems="10"
                android:id="@+id/temp_bottom_edit"
                />

            <ImageButton
                android:layout_marginTop="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_columnWeight="1"
                android:background="@color/transparent"
                android:src="@drawable/question"
                android:scaleType="centerInside"
                />
            <edu.uwp.alga.utils.LabelTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_columnWeight="4"
                app:layout_rowWeight="1"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/WText"

                android:text="@string/calc_lake_depth"
                android:id="@+id/lake_depth" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="3"
                android:inputType="number"
                android:hint="m"
                android:padding="7dp"
                android:background="@color/WText"
                android:gravity="center"
                android:ems="10"
                android:id="@+id/lake_depth_edit"/>
            <ImageButton
                android:layout_marginTop="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@color/transparent"
                android:src="@drawable/question"
                android:scaleType="centerInside"
                app:layout_columnWeight="1"/>
            <edu.uwp.alga.utils.LabelTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_columnWeight="4"
                android:textSize="@dimen/text_medium"
                app:layout_rowWeight="1"
                android:textColor="@color/WText"
                android:text="@string/calc_chl_a"
                android:id="@+id/chl_a" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_columnWeight="3"
                android:text="Set"
                android:textColor="@color/WText"
                android:background="#8a8a8a"
                android:textStyle="bold"
                android:id="@+id/buttonChla"
                android:onClick="calculateChla"/>

            <ImageButton
                android:layout_marginTop="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@color/transparent"
                android:src="@drawable/question"
                android:scaleType="centerInside"
                app:layout_columnWeight="1"
                />



        </android.support.v7.widget.GridLayout>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="170dp"
                android:layout_height="70dp"

                android:background="@drawable/submit_state"
                android:src="@drawable/submit_button"
                android:id="@+id/button"
                android:onClick="SubmitData"
                android:soundEffectsEnabled="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>



</FrameLayout>